fix(remove): 🐛 ➖ z-index of .oo-ui-windowManager-modal > .oo-ui-dialog

--- a/skinStyles/ooui/oojs-ui-windows.less
+++ b/skinStyles/ooui/oojs-ui-windows.less
@@ -123,7 +123,6 @@
 }
 
 .oo-ui-windowManager-modal > .oo-ui-dialog {
-	z-index: @z-index-page-header;
 	background-color: var( --background-color-overlay--lighter );
 }
 
